package com.mycompany.trabalho.threads.dsd;

import com.mycompany.trabalho.threads.dsd.view.TelaInicial;

public class TrabalhoThreads65dsd {

    public static void main(String[] args) {
        TelaInicial telaInicial = new TelaInicial();
        telaInicial.setVisible(true);
    }
}